--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".onboarding.splash.SplashFragment">
+    tools:context=".ui.onboarding.splash.SplashFragment">
 
     <FrameLayout
         android:id="@+id/frameLayout"
