--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -218,4 +218,9 @@
         app:layout_constraintEnd_toEndOf="@+id/divider1"
         app:layout_constraintTop_toBottomOf="@+id/tv_total_price" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_place_order" />
 </androidx.constraintlayout.widget.ConstraintLayout>
